changed the design a bit, still need to fix bottom cutting of on smaller view ports

--- a/simple-modal/style.css
+++ b/simple-modal/style.css
@@ -14,6 +14,11 @@ body {
 .button:hover {
   background: #333;
 }
+.iF {
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
 .modal {
   display: none;
   position: fixed;
@@ -23,19 +28,16 @@ body {
   height: 100vh;
   width: 100vw;
   overflow: auto;
-  /* box-sizing: content-box; */
-  grid-template-columns: max-content;
+  grid-template-columns: minmax(360px, 80%);
   grid-template-rows: 80%;
   justify-content: center;
   align-content: center;
   background-color: rgba(20, 20, 20, 0.5);
 }
 .modal-content {
-  background-color: #f4f4f4;
-  margin: 20% 0;
   padding: 30px;
-  /* width: 70%; */
-  box-shadow: 0 0 10px 1px #888;
+  background-color: #f4f4f4;
+  /* box-shadow: 0 0 10px 1px #888; */
 }
 .closeBtn {
   float: right;
